# beaterOS

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  final.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
contracts/: README.md  validate.py
crates/beater-coord/: Cargo.toml
crates/beater-coord/src/: main.rs
crates/beater-os-coordination/: Cargo.toml
crates/beater-os-coordination/src/: claim.rs  coordinator.rs  error.rs  journal.rs  lib.rs  merge.rs  principal.rs  review.rs
crates/beater-os-coordination/tests/: coordination.rs
crates/beater-os-sandbox/: Cargo.toml
crates/beater-os-sandbox/src/: lib.rs
crates/beater-os-sandbox/tests/: lane.rs
docs/: agent-coordination-log.md  beaterosctl.md  coordination.md  glossary.md  implementation-backlog.md  multi-agent-coordination.md  multi-agent-review-protocol.md  optimization-agent-playbook.md  repo-map.md  review-checklist.md  sota-systems-engineering.md  source-matrix.md  threat-model.md
scripts/: check-bare-metal-readiness.py  check-governance.py  check-pr-review-packet.py  local-e2e.py  mvp-demo.sh  run-bare-metal-e2e-matrix.py  run-beater-os-runtime-smoke.py  run-beater-osd-http-execute-smoke.py  run-beater-osd-http-pending-worker-smoke.py  run-beater-osd-http-worker-loop-smoke.py
spec/: COORDINATION.md  README.md
tests/: test_bare_metal_readiness.py  test_collect_bare_metal_host_profile.py  test_contracts.py  test_final_integrity.py  test_local_e2e.py  test_pr_review_packet.py
tools/: .gitignore  contracts_validate.py  final_integrity.lock.json  final_integrity.py  (+2 more)
(+131 files in other folders)
